# ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  main.py  nixpacks.toml  pyproject.toml  server.py  test_live.py
.github/workflows/: ci.yml
agents/: detail_interview.py  document_guidance.py  draft_writer.py  form_filler.py  initial_interview.py  rag_detail.py  rag_search.py  report_writer.py  service_select.py
docs/: agent_specs.md  ai-stack.md  dev-tools.md  development_plan.md  overview.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  reference.md  servers.md  setup.md  state_design.md  team-division.md  testing.md
graph/: builder.py  config.py  state.py
prompts/: detail_interview.txt  document_guidance.txt  draft_field_selector.txt  draft_writer.txt  form_field_mapper.txt  initial_interview.txt  report_writer.txt
scripts/: fill_hwp.js  package-lock.json  package.json
tests/: conftest.py  test_detail_interview.py  test_document_guidance.py  test_draft_writer.py  test_form_filler.py  test_graph.py  test_initial_interview.py  test_initial_interview_integration.py  test_rag_client_stub.py  test_rag_detail.py  test_rag_integration.py  test_rag_search.py  test_report_writer.py  test_service_select.py  test_smoke.py  test_state.py
tests/fixtures/: test_mapping.json  어선보험가입청약서.hwp  응급안전안심서비스_신청서.hwp  응급안전안심서비스_신청서.hwpx
tools/: hwnv_client.py  hwp_filler.py  json_utils.py  llm.py  profile_utils.py  prompt_loader.py  rag_client.py
